templates/_emotion/frontend/_resources/styles/emotion.css
/* ... */
#content .article-slider-emotion .ajaxSlider .sliding_container .slide { width: 100%; padding: 0 30px }
#content .article-slider-emotion .ajaxSlider .sliding_container .slide .article_box {
    height: 88%;
    width: auto;
    margin: 10px 0;
    float: none;
    border-right: 1px solid #dfdfdf;
}
#content .article-slider-emotion .outer-article-box {float: left;height: 100%;}
#content .article-slider-emotion .outer-article-box .article-thumb-wrapper {display: block;height: 220px;text-align: center;}
#content .article-slider-emotion .outer-article-box .article-thumb-wrapper img {display: inline-block;max-width: 100%;max-height: 200px;}
#content .article-slider-emotion .article_box .title,
#content .article-slider-emotion .article_box .price {font-size: 14px;}

#content .article-slider-emotion .slide .outer-article-box:last-child .article_box {border-right: 0;}
#content .article-slider-emotion .slide .article-purchase-unit {text-align: center;color: #000;font-size: 10px;margin-bottom: 5px;}

.emotion-link {border-top: 1px solid #F7D5C5;margin-top: 10px;padding-top: 10px;}
.emotion-offers {
    color: #e1540f;
    background: url("../images/icons/ico_listing-next.png") no-repeat scroll -3px 1px transparent;
    padding: 0 0 5px 15px;
    display: inline-block;
}
.emotion-offers:hover { text-decoration: underline;}

.fuzzy_result_box {
    width: 798px;
}
.fuzzy_result_box .inner_box {
    border: 1px solid #dfdfdf;
}
.mousetrap { opacity: 0; background: #fff }


/* New Image Configurator
   -------------------------------------------- */
#buybox .configurator--variant .variant--group {
    margin: 0 0 10px 0;
    clear: both;
}
#buybox .configurator--variant .variant--name {
    margin: 0 0 5px 0;
    font-weight: bold;
}
#buybox .configurator--variant .variant--option {
    line-height: 57px;
    margin: 0 10px 10px 0;
    display: block;
    position: relative;
    float: left;
}
#buybox .configurator--variant .option--input {
    display: block;
    width: 100%;
    height: 100%;
    margin: 0;
    position: absolute;
    top: 0; left: 0;
    z-index: 10;
    cursor: pointer;
    -khtml-opacity: 0;
    -moz-opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity = 0);
    opacity: 0;
}
#buybox .configurator--variant .option--input:hover ~ label {
    color: #333333;
    border-color: #333333;
}
#buybox .configurator--variant .option--input:hover ~ label.is--disabled {
    color: #999999;
    border-color: #DFDFDF;
}
#buybox .configurator--variant .option--input:checked ~ label {
    color: #E1540F;
    border-color: #E1540F;
}
#buybox .configurator--variant .option--input:disabled ~ label {
    -khtml-opacity: 0.5;
    -moz-opacity: 0.5;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
    filter: alpha(opacity = 50);
    opacity: 0.5;
}
#buybox .configurator--variant .option--input:disabled {
    cursor: default;
}
#buybox .configurator--variant .option--label {
    display: block;
    height: 57px;
    width: 57px;
    padding: 3px;
    margin: 0;
    line-height: 57px;
    position: relative;
    z-index: 1;
    border: 1px solid #DFDFDF;
    font-weight: bold;
    text-align: center;
    float: none;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding-box;
    background-clip: padding-box;
}
#buybox .configurator--variant .option--label img {
    margin: 0 auto;
    vertical-align: middle;
}

